--- a/profileCard/index.html
+++ b/profileCard/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>mohammad zolfaghari - profile card</title>
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/db94a1a2d1.js" crossorigin="anonymous"></script>
+</head>
+<body>
+    <section>
+        <div class="personal">
+            <span class="pro">PRO</span>
+            <img src="./images/myImage.png" alt="Error">
+            <h1 class="name">mohammad zolfaghari</h1>
+            <p class="country">IRAN</p>
+            <p class="title">don't know yet</p>
+            <div class="buttons">
+                <button class="primary">Message</button>
+                <button class="secondary">Following</button>
+            </div>
+            <div class="social">
+                <a href="https://twitter.com/?lang=en" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://telegram.org/" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+                <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-github"></i></a>
+            </div>
+        </div>
 
+        <div class="skills">
+            <h2>Skills</h2>
+            <ul>
+                <li>python</li>
+                <li>Django</li>
+                <li>CSS</li>
+                <li>HTML</li>
+                <li>scrapy</li>
+                <li>network</li>
+                <li>matlab</li>
+                <li>VHDL</li>
+            </ul>
+        </div>
+    </section>
+</body>
+</html>
